@@ -47,7 +47,7 @@ libsc_argparse_dep = dependency(
 libsc_lwt_dep = dependency(
   'libsc-lwt',
   fallback: ['sc-lwt', 'libsc_lwt_dep'],
-  version: '>=0.5.1',
+  version: '>=0.6.0',
 )
 libnosj_dep = dependency(
   'libnosj',
